--- a/src/componentes/Ideias/ideias.css
+++ b/src/componentes/Ideias/ideias.css
@@ -289,6 +289,12 @@
     .sections{
         height: 11rem;
     }
+    .capacidades-mobile-container {
+        gap: 8px;
+    }
+    .first-sec, .first-sec.second, .first-sec.third{
+        margin-right: 15px;
+    }
 }
 
 @media(max-width:390px){
@@ -298,12 +304,15 @@
     .capacidades-mobile-container {
         gap: 10px;
     }
-}
-
-@media(max-width:370px){
+    .options-list.options p{
+        font-size: 11.5px;
+    }
     .sections h1{
         font-size: 16px;
     }
+}
+
+@media(max-width:370px){
     .options-list.options p{
         font-size: 11px;
     }
