style: alinhamento e responsivo mobile

--- a/src/componentes/Ideias/ideias.css
+++ b/src/componentes/Ideias/ideias.css
@@ -41,18 +41,18 @@
     display: flex;
     width: max-content;
     white-space: nowrap;
-    margin-right: 100px;
+    
 }
+.first-sec, .first-sec.second, .first-sec.third{
+    margin-right: 100px;
+    width: 350px;
+}
+
 .second-sec{
     display: flex;
     gap: 48px;
 }
-.first-sec.second{
-    margin-right: 8.0625rem;
-}
-.first-sec.third{
-    margin-right: 7.6875rem;
-}
+
 .sections:nth-child(3){
     border-top: 1px var(--color-gray-700) solid;
 }
@@ -222,14 +222,8 @@
 @media(max-width: 1280px) {}
 
 @media(max-width: 1150px) {
-    .first-sec{
+    .first-sec, .first-sec.second, .first-sec.third{
         margin-right: 50px;
-    }
-    .first-sec.second{
-        margin-right: 79px;
-    }
-    .first-sec.third {
-        margin-right: 73px;
     }
 }
 
@@ -257,7 +251,17 @@
     }
 }
 
-@media(max-width: 800px) {}
+@media(max-width: 800px) {
+    .first-sec, .first-sec.second, .first-sec.third{
+        width: 25vw;
+    }
+    .options-text{
+        width: 25vw;
+    }
+    .first-sec, .first-sec.second, .first-sec.third{
+        margin-right: 10px;
+    }
+}
 
 @media(max-width: 600px) {
     .title-ideias h1{
@@ -276,6 +280,12 @@
     .options span{
         margin-right: 2px;
     }
+    .first-sec, .first-sec.second, .first-sec.third{
+        width: 23vw;
+    }
+    .options-text{
+        width: 23vw;
+    }
 }
 
 @media(max-width: 480px) {
@@ -290,16 +300,20 @@
         height: 11rem;
     }
     .capacidades-mobile-container {
-        gap: 8px;
+        gap: 15px;
     }
     .first-sec, .first-sec.second, .first-sec.third{
         margin-right: 15px;
+    }
+    .first-sec, .first-sec.second, .first-sec.third, .options-text{
+        width: 18vw;
     }
 }
 
 @media(max-width:390px){
     .first-sec, .first-sec.second, .first-sec.third {
         margin-right: 10px;
+        width: 20vw;
     }
     .capacidades-mobile-container {
         gap: 10px;
