--- a/src/componentes/Solucoes/solucoes.css
+++ b/src/componentes/Solucoes/solucoes.css
@@ -26,7 +26,15 @@
     width: 100%;
     max-width: 725px;
     height: 151px;
+    
 }
+.word{
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+    line-height: 1.2em;
+    overflow: visible;
+    display: inline-block;
+}
+
 
 /* parte da direita */
 
@@ -50,6 +58,11 @@
     
 }
 
+.text-block{
+    display: flex;
+    flex-direction: column;
+    white-space: nowrap;
+}
 
 .right_part_solucoes a {
     color: var(--color-gray-500);
@@ -152,6 +165,7 @@
 }
 .grid-left{
     height: 11.25rem;
+    white-space: nowrap;
 }
 
 
@@ -188,6 +202,7 @@
 .studio_left p {
     font-weight: 400;
     line-height: 140%;
+    font-family: "neue-haas-grotesk-text"
 }
 
 .studio_left .p1 {
@@ -237,8 +252,10 @@
 
 }
 
-@media(max-width: 1200px) {
- 
+@media(max-width: 1280px) {
+    .texts_studio{
+        gap: 20px;
+    }
 
 }
 
