add: animacao apra mobile

--- a/src/componentes/Solucoes/solucoes.css
+++ b/src/componentes/Solucoes/solucoes.css
@@ -273,8 +273,9 @@
         display: none;
     }
     .studio_left.studio-res{
-        display: block;
+        display: flex;
         padding-top: 40px;
+        flex-direction: column;
     }
 }
 
