add: animacao de texto em manifesto

--- a/src/componentes/Solucoes/solucoes.css
+++ b/src/componentes/Solucoes/solucoes.css
@@ -28,7 +28,7 @@
     height: 151px;
     
 }
-.word{
+.left_text .word, .herosecond .word{
     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
     line-height: 1.2em;
     overflow: visible;
