--- a/src/pages/Home/componentesHome/AboutHome/abouthome.css
+++ b/src/pages/Home/componentesHome/AboutHome/abouthome.css
@@ -37,6 +37,11 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+
+}
+.manifesto-text h1 .word{
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+
 }
 
 
@@ -57,6 +62,9 @@
     gap: 3.1875rem;
     
 }
+.square-one, .square-two {
+    will-change: transform, opacity;
+  }
 
 .square-one p, .square-two p{
     font-size: 18px;
