--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,203 +1,264 @@
- .container-first-page{
-    background: black;
-    overflow: hidden;
+ .container-first-page {
+     background: black;
+     overflow: hidden;
  }
- 
+
  /* Home */
-.home {
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-    position: relative;
-}
+ .home {
+     width: 100vw;
+     height: 100vh;
+     overflow: hidden;
+     position: relative;
+ }
 
 
-.home img {
-    object-position: 50% 30%;
-    z-index: 1;
-    position: absolute;
-    
-}
-.container-home{
-    width: 100%;
-    height: 100vh;
-    position: relative;
-}
+ .home img {
+     object-position: 50% 30%;
+     z-index: 1;
+     position: absolute;
+
+ }
+
+ .container-home {
+     width: 100%;
+     height: 100vh;
+     position: relative;
+ }
 
 
-/* Seção do meio da home */
-.middle{
-    width: 100%;
-    max-width: 120rem;
-    display: flex;
-    justify-content: space-between;
-    top: 50%;
-    position: absolute;
-    z-index: 1;
-    height: 6.25rem;
-    align-items: start;
-}
-.middle .left_part{
-    width: 100%;
-    max-width: 7.375rem;
-    height: 6.25rem;
-    color: var( --color-gray-500);
-}
-.top_part{
-    margin-bottom: 1.75rem;
-}
-.top_part p{
-    color: var(--color-white);
-    opacity: 0.5;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 100%;
-}
-.bottom_part{
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-}
+ /* Seção do meio da home */
+ .middle {
+     width: 100%;
+     max-width: 120rem;
+     display: flex;
+     justify-content: space-between;
+     top: 50%;
+     position: absolute;
+     z-index: 1;
+     height: 6.25rem;
+     align-items: start;
+ }
 
-.bottom_part a{
-    color: var(--color-white);
-    font-size: 16px;
-    line-height: 100%;
-    font-weight: 500;
-}
-.middle .right_part{
-    width: 100%;
-    max-width: 193px;
-    height: 6.25rem;
-    color: var(--color-gray-500);
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-}
+ .middle .left_part {
+     width: 100%;
+     max-width: 7.375rem;
+     height: 6.25rem;
+     color: var(--color-gray-500);
+ }
 
+ .top_part {
+     margin-bottom: 1.75rem;
+ }
 
-.middle .right_part a{
-    color: var(--color-gray-900);
-    margin-left: 5px;
-}
-.right_part .time-text-home {
-    margin-bottom: 1.75rem;
-}
+ .top_part p {
+     color: var(--color-white);
+     opacity: 0.5;
+     font-weight: 400;
+     font-size: 16px;
+     line-height: 100%;
+ }
 
-.right_part .time-text-home p{
-    color: var(--color-white);
-    font-size: 16px;
-    line-height: 100%;
-    font-weight: 400;
-    font-family: "neue-haas-grotesk-display";
-    opacity: 0.5;
-}
-.right_part .time{
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-    gap: 12px;
-}
-.right_part .time p{
-    font-weight: 450;
-    line-height: 100%;
-    color: var(--color-gray-500);
+ .bottom_part {
+     display: flex;
+     flex-direction: column;
+     gap: 12px;
+ }
 
-}
-.img-revelatio-mobile{
-    display: none;
-}
- 
+ .bottom_part a {
+     color: var(--color-white);
+     font-size: 16px;
+     line-height: 100%;
+     font-weight: 500;
+ }
+
+ .middle .right_part {
+     width: 100%;
+     max-width: 193px;
+     height: 6.25rem;
+     color: var(--color-gray-500);
+     display: flex;
+     flex-direction: column;
+     align-items: end;
+ }
 
 
-/* Texto revelatio */
-.img_revelatio{
-    width: 100%;
-    max-width: 120rem;
-    height: 11.875rem;
-    position: absolute;
-    bottom: 0;
-    border-top: 1px var(--color-gray-200) solid; 
-    padding-top: 40px;
-    margin-bottom: 60px;
-    z-index: 1;
-}
+ .middle .right_part a {
+     color: var(--color-gray-900);
+     margin-left: 5px;
+ }
+
+ .right_part .time-text-home {
+     margin-bottom: 1.75rem;
+ }
+
+ .right_part .time-text-home p {
+     color: var(--color-white);
+     font-size: 16px;
+     line-height: 100%;
+     font-weight: 400;
+     font-family: "neue-haas-grotesk-display";
+     opacity: 0.5;
+ }
+
+ .right_part .time {
+     display: flex;
+     flex-direction: column;
+     align-items: end;
+     gap: 12px;
+ }
+
+ .right_part .time p {
+     font-weight: 450;
+     line-height: 100%;
+     color: var(--color-gray-500);
+
+ }
+
+ .img-revelatio-mobile {
+     display: none;
+ }
 
 
 
-.img_revelatio img{
-   width: 100%;
-   height: 100%;
-   object-fit: contain;
-}
-
-/* responsivo medias */
-
-@media(max-width: 1400px) {
-    .img_revelatio{
-        padding-top: 10px;
-        margin-bottom: 0px;
-    }
-}
-@media(max-width: 1280px) {
-    .middle{
-        top: 40%;
-    }
-}
-
-@media(max-width: 1200px) {}
-
-@media(max-width: 991px) {}
-
-@media(max-width: 768px) {}
-
-@media(max-width: 600px) {
-
-    .middle .left_part p{
-        font-size: 14px;
-    }
-    .middle .right_part p {
-        font-size: 14px;
-    }
-    .top_part{
-        margin-bottom: 15px;
-    }
-    .right_part .time-text-home{
-        margin-bottom: 15px;
-    }
-}
-
-@media(max-width: 480px) {
-    .home {
-        width: 100vw;
-        height: 80vh;
-    }
-    .img_revelatio{
-        display: none;
-    }
-    .container-home{
-        height: 80vh;
-        z-index: 1;
-    }
-    .img-revelatio-mobile img{
-        width: 100%;
-        height: auto;
-    }
-
-    .img-revelatio-mobile{
-        display: flex;
-        width: 100%;
-        position: absolute;
-        bottom: 10px;
-        padding-bottom: 25%;
-        border-top: 1px var(--color-gray-200) solid; 
-        padding-top: 5%;
-
-    }
-    .middle{
-        top: 50%;
-    }
-   
-}
+ /* Texto revelatio */
+ .img_revelatio {
+     width: 100%;
+     max-width: 120rem;
+     height: 11.875rem;
+     position: absolute;
+     bottom: 0;
+     border-top: 1px var(--color-gray-200) solid;
+     padding-top: 40px;
+     margin-bottom: 60px;
+     z-index: 1;
+ }
 
 
+
+ .img_revelatio img {
+     width: 100%;
+     height: 100%;
+     object-fit: contain;
+ }
+
+ /* pré loader */
+
+ .overlay {
+     position: fixed;
+     top: 0;
+     left: 0;
+     width: 100%;
+     max-width: 120rem;
+     height: 100vh;
+     background: black;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     z-index: 10;
+     clip-path: polygon(100% 0%, 0% 0%, 0% 100%, 100% 100%);
+ }
+
+ .image-overlay {
+     width: 100%;
+     height: 100%;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+ }
+
+ .over-image {
+     width: 100%;
+     max-width: 400px;
+     height: 100px;
+     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+ }
+
+ .image-overlay img {
+     width: 100%;
+     max-width: 400px;
+     height: 100px;
+     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+     object-fit: fill;
+
+ }
+
+ .over-image .image-branca {
+     clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%);
+ }
+
+ /* responsivo medias */
+
+ @media(max-width: 1400px) {
+     .img_revelatio {
+         padding-top: 10px;
+         margin-bottom: 0px;
+     }
+ }
+
+ @media(max-width: 1280px) {
+     .middle {
+         top: 40%;
+     }
+ }
+
+ @media(max-width: 1200px) {}
+
+ @media(max-width: 991px) {}
+
+ @media(max-width: 768px) {}
+
+ @media(max-width: 600px) {
+
+     .middle .left_part p {
+         font-size: 14px;
+     }
+
+     .middle .right_part p {
+         font-size: 14px;
+     }
+
+     .top_part {
+         margin-bottom: 15px;
+     }
+
+     .right_part .time-text-home {
+         margin-bottom: 15px;
+     }
+ }
+
+ @media(max-width: 480px) {
+     .home {
+         width: 100vw;
+         height: 80vh;
+     }
+
+     .img_revelatio {
+         display: none;
+     }
+
+     .container-home {
+         height: 80vh;
+         z-index: 1;
+     }
+
+     .img-revelatio-mobile img {
+         width: 100%;
+         height: auto;
+     }
+
+     .img-revelatio-mobile {
+         display: flex;
+         width: 100%;
+         position: absolute;
+         bottom: 10px;
+         padding-bottom: 25%;
+         border-top: 1px var(--color-gray-200) solid;
+         padding-top: 5%;
+
+     }
+
+     .middle {
+         top: 50%;
+     }
+
+ }
